--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,26 @@ allprojects {
     }
 }
 
+ext {
+    coroutines = '1.3.7'
+    constraintLayout = '2.0.4'
+    material = '1.2.1'
+    appCompat = '1.2.0'
+    coreKtx = '1.3.2'
+    okhttpVersion = '4.9.0'
+    retrofitVersion = '2.9.0'
+
+    koin = '2.0.1'
+
+    junitVersion = '4.13.1'
+    hamcrest = '1.3'
+    junitAndroidTest = '1.1.2'
+    runner = '1.0.2'
+    espressoCore = '3.3.0'
+    mockitoVersion = '3.3.3'
+    archVersion = '1.1.1'
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
