--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,12 @@ ext {
     coreKtx = '1.3.2'
     okhttpVersion = '4.9.0'
     retrofitVersion = '2.9.0'
+    circleImageView = '3.0.0'
 
     koin = '2.0.1'
+
+    lifecycleVersion = '2.2.0'
+    livedataVersion = '2.2.0'
 
     junitVersion = '4.13.1'
     hamcrest = '1.3'
@@ -39,6 +43,7 @@ ext {
     espressoCore = '3.3.0'
     mockitoVersion = '3.3.3'
     archVersion = '1.1.1'
+
 }
 
 task clean(type: Delete) {
